// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-kb3vh0 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-kb3vh0.cache-kb3vh0 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-kb3vh0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-byk5sg {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-byk5sg.cache-byk5sg {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-byk5sg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-1a5hvw9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-7blv1o {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-7blv1o:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-7blv1o:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1849l9c {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-1849l9c.cache-1849l9c {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="true"
      class="eu28k4m5 e1g1zfwd0 cache-1a5hvw9"
    >
      <input
        aria-checked="true"
        aria-disabled="true"
        checked=""
        class="cache-7blv1o eu28k4m4"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-1849l9c"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1a5hvw9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-7blv1o {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-7blv1o:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-7blv1o:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1849l9c {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-1849l9c.cache-1849l9c {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="true"
      class="eu28k4m5 e1g1zfwd0 cache-1a5hvw9"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-7blv1o eu28k4m4"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-1849l9c"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-ejkrhk {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 0;
  padding: 2px;
  pointer-events: auto;
}

.cache-ejkrhk:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-ejkrhk:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-14jpmal {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-14jpmal.cache-14jpmal {
  vertical-align: middle;
  margin-right: 0;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-ejkrhk eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-14jpmal"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-kb3vh0 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-kb3vh0.cache-kb3vh0 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-kb3vh0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1naco6v {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-1naco6v.cache-1naco6v {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-9xime5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-9xime5.cache-9xime5 {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-1naco6v"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-9xime5"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-byk5sg {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-byk5sg.cache-byk5sg {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="mixed"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-byk5sg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1ku073z {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <div
        class="cache-1ku073z eu28k4m1"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="cache-1mntgth-ActivityIndicator"
          role="progressbar"
          style="height: 24px; width: 24px;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#D4DAE7"
            stroke-width="16"
          />
          <circle
            class="cache-wxrv4d-ActivityIndicator"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#4F0599"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-ejkrhk {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 0;
  padding: 2px;
  pointer-events: auto;
}

.cache-ejkrhk:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-ejkrhk:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1rzkhq0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-ejkrhk eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <div
        class="cache-1rzkhq0 eu28k4m1"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="cache-1mntgth-ActivityIndicator"
          role="progressbar"
          style="height: 24px; width: 24px;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#D4DAE7"
            stroke-width="16"
          />
          <circle
            class="cache-wxrv4d-ActivityIndicator"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#4F0599"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-mh8hgn {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-mh8hgn:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-mh8hgn:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-qishbn {
  fill: #dce1eb;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
  box-sizing: content-box;
}

.cache-qishbn.cache-qishbn {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-mh8hgn eu28k4m4"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-qishbn"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-mh8hgn {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-mh8hgn:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-mh8hgn:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-1ku073z {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-mh8hgn eu28k4m4"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <div
        class="cache-1ku073z eu28k4m1"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="cache-1mntgth-ActivityIndicator"
          role="progressbar"
          style="height: 37px; width: 37px;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#D4DAE7"
            stroke-width="16"
          />
          <circle
            class="cache-wxrv4d-ActivityIndicator"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#4F0599"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with valid 1`] = `
<DocumentFragment>
  .cache-1dt8gm3 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-olcms0 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-olcms0:hover svg {
  border-radius: 4px;
  background-color: #F6F6F8;
  fill: #4F0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-olcms0:focus+svg {
  outline: 1px #C4C9D6 dotted;
}

.cache-13u1jd8 {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-13u1jd8.cache-13u1jd8 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-1dt8gm3"
    >
      <input
        aria-checked="false"
        class="cache-olcms0 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-13u1jd8"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-sejyyr eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;
